--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "author": "Niap",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "node-freerdp2": "https://github.com/Niap/node-freerdp2",
     "sharp": "^0.25.2",
     "socket.io": "^2.3.0",
-		"node-freerdp2": "https://github.com/Niap/node-freerdp2"
+    "uuid": "^8.0.0"
   }
 }
