add delete & change roter to hash

--- a/server/app.json
+++ b/server/app.json
@@ -1,1 +1,1 @@
-[{"name":"notepad","cmd":"notepad","icon":"8312e5155002f73f0f312971d4af9089","id":"1"},{"name":"123123","cmd":"123123","icon":"032091e35ce26e0c2a0ac30dc0058ab1","id":"11"}]
+[{"name":"notepad1","cmd":"notepad","icon":"46d0762bd1641e99204f3c5257c8c210","id":"1"}]
