--- a/server/app.json
+++ b/server/app.json
@@ -1,1 +1,1 @@
-[{"name":"notepad1","cmd":"notepad","icon":"46d0762bd1641e99204f3c5257c8c210","id":"1"}]
+[{"name":"notepad1","cmd":"notepad","icon":"46d0762bd1641e99204f3c5257c8c210","id":"1"},{"name":"calc","cmd":"calc","icon":"293d0ce6b07d448d546709780afb379b","id":"11"}]
