--- a/server/app.json
+++ b/server/app.json
@@ -1,1 +1,1 @@
-[{"name":"notepad1","cmd":"notepad","icon":"46d0762bd1641e99204f3c5257c8c210","id":"1"},{"name":"calc","cmd":"calc","icon":"293d0ce6b07d448d546709780afb379b","id":"11"}]
+[{"name":"notepad1","cmd":"notepad","icon":"e2b5d3c1-b9fc-4e19-af26-f59e33ab7455-1589954134502.png","id":"1"},{"name":"calc","cmd":"calc","icon":"693f9c06-a708-40a7-a6f4-f5aedf1f5a79-1589954139970.png","id":"11"}]
