--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
-    "node-freerdp2": "https://github.com/Niap/node-freerdp2",
+    "node-freerdp2": "https://github.com/Niap/node-freerdp2#master",
+    "rle": "^1.0.2",
     "sharp": "^0.25.2",
     "socket.io": "^2.3.0",
     "uuid": "^8.0.0"
